--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -646,6 +646,8 @@
     "    for file_name in files:\n",
     "        result[program_name][file_name] = {}\n",
     "        for depth_value in depth:\n",
+    "            if \"math\" in file_name and depth_value > 64:\n",
+    "                continue\n",
     "            output_speed = compile_and_run(program_name, file_name, depth_value)\n",
     "            result[program_name][file_name][depth_value] = output_speed\n",
     "\n",
